--- a/booking.html
+++ b/booking.html
@@ -29,18 +29,18 @@
     <body>
         <!-- Header Section Start -->
         <header id="header">
-            <a href="index.html" class="logo"><img src="img/batuemas5.png" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="img/BatuEmas.png" alt="logo"></a>
             <div class="phone"><i class="fa fa-phone"></i>+62 0822 2664 4055</div>
             <div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
             <nav class="main-menu top-menu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="room.html">Rooms</a></li>
-                    <li><a href="amenities.html">Amenities</a></li>
-                    <li class="active"><a href="booking.html">Booking</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+<li><a href="index.html">Beranda</a></li>
+<li><a href="about.html">Tentang Kami</a></li>
+<li><a href="room.html">Kamar</a></li>
+<li><a href="amenities.html">Fasilitas</a></li>
+<li class="active"><a href="booking.html">Pemesanan</a></li>
+<li><a href="login.html">Masuk</a></li>
+<li><a href="contact.html">Hubungi Kami</a></li>
                 </ul>
             </nav>
         </header>
@@ -75,7 +75,7 @@
                     <div class="control-group col-md-3">
                         <div class="form-row">
                             <div class="control-group col-md-6">
-                                <label>Adult</label>
+                                <label>Dewasa</label>
                                 <select class="custom-select">
                                     <option selected>0</option>
                                     <option value="1">1</option>
@@ -91,7 +91,7 @@
                                 </select>
                             </div>
                             <div class="control-group col-md-6 kid">
-                                <label>Kid</label>
+                                <label>Anak</label>
                                 <select class="custom-select">
                                     <option selected>0</option>
                                     <option value="1">1</option>
@@ -109,76 +109,77 @@
                         </div>
                     </div>
                     <div class="control-group col-md-3">
-                        <button class="btn btn-block">Search</button>
+                        <button class="btn btn-block">Cari</button>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Search Section End -->
         
-        <!-- Booking Section Start -->
-        <div id="booking">
-            <div class="container">
-                <div class="section-header">
-                    <h2>Room Booking</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in mi libero. Quisque convallis, enim at venenatis tincidunt.
-                    </p>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="booking-form">
-                            <div id="success"></div>
-                            <form name="sentMessage" id="bookingForm" novalidate="novalidate">
-                                <div class="form-row">
-                                    <div class="control-group col-md-6">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" id="fname" placeholder="E.g. John" required="required" data-validation-required-message="Please enter first name" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group col-md-6">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" id="lname" placeholder="E.g. Sina" required="required" data-validation-required-message="Please enter last name" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="control-group col-md-6">
-                                        <label>Mobile</label>
-                                        <input type="text" class="form-control" id="mobile" placeholder="E.g. +1 234 567 8900" required="required" data-validation-required-message="Please enter your mobile number" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group col-md-6">
-                                        <label>Email</label>
-                                        <input type="email" class="form-control" id="email" placeholder="E.g. email@example.com" required="required" data-validation-required-message="Please enter your email" />
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="control-group col-md-6">
-                                        <label>Check-In</label>
-                                        <input type="text" class="form-control datetimepicker-input" id="date-1" data-toggle="datetimepicker" data-target="#date-1" placeholder="E.g. MM/DD/YYYY" required="required" data-validation-required-message="Please enter date"/>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                    <div class="control-group col-md-6">
-                                        <label>Check-Out</label>
-                                        <input type="text" class="form-control datetimepicker-input" id="date-2" data-toggle="datetimepicker" data-target="#date-2" placeholder="E.g. MM/DD/YYYY" required="required" data-validation-required-message="Please enter date"/>
-                                        <p class="help-block text-danger"></p>
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <label>Special Request</label>
-                                    <input type="text" class="form-control" id="request" placeholder="E.g. Special Request" required="required" data-validation-required-message="Please enter your special request" />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="button"><button type="submit" id="bookingButton">Book Now</button></div>
-                            </form>
+<!-- Booking Section Start -->
+<div id="booking">
+    <div class="container">
+        <div class="section-header">
+            <h2>Pemesanan Kamar</h2>
+            <p>
+                Silakan isi formulir di bawah ini untuk melakukan pemesanan kamar. Kami akan segera menghubungi Anda untuk konfirmasi lebih lanjut.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="booking-form">
+                    <div id="success"></div>
+                    <form name="sentMessage" id="bookingForm" novalidate="novalidate">
+                        <div class="form-row">
+                            <div class="control-group col-md-6">
+                                <label>Nama Depan</label>
+                                <input type="text" class="form-control" id="fname" placeholder="Contoh: Budi" required="required" data-validation-required-message="Silakan masukkan nama depan Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group col-md-6">
+                                <label>Nama Belakang</label>
+                                <input type="text" class="form-control" id="lname" placeholder="Contoh: Santoso" required="required" data-validation-required-message="Silakan masukkan nama belakang Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
                         </div>
-                    </div>
+                        <div class="form-row">
+                            <div class="control-group col-md-6">
+                                <label>Nomor Telepon</label>
+                                <input type="text" class="form-control" id="mobile" placeholder="Contoh: +62 123 4567 8900" required="required" data-validation-required-message="Silakan masukkan nomor telepon Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group col-md-6">
+                                <label>Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Contoh: email@contoh.com" required="required" data-validation-required-message="Silakan masukkan email Anda" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="control-group col-md-6">
+                                <label>Tanggal Check-In</label>
+                                <input type="text" class="form-control datetimepicker-input" id="date-1" data-toggle="datetimepicker" data-target="#date-1" placeholder="Contoh: DD/MM/YYYY" required="required" data-validation-required-message="Silakan masukkan tanggal" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group col-md-6">
+                                <label>Tanggal Check-Out</label>
+                                <input type="text" class="form-control datetimepicker-input" id="date-2" data-toggle="datetimepicker" data-target="#date-2" placeholder="Contoh: DD/MM/YYYY" required="required" data-validation-required-message="Silakan masukkan tanggal" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label>Permintaan Khusus</label>
+                            <input type="text" class="form-control" id="request" placeholder="Contoh: Permintaan Khusus" required="required" data-validation-required-message="Silakan masukkan permintaan khusus Anda" />
+                            <p class="help-block text-danger"></p>
+                        </div>
+                        <div class="button"><button type="submit" id="bookingButton">Pesan Sekarang</button></div>
+                    </form>
                 </div>
             </div>
         </div>
-        <!-- Booking Section End -->
+    </div>
+</div>
+<!-- Booking Section End -->
+
         
         <!-- Footer Section Start -->
         <div id="footer">
