--- a/room.html
+++ b/room.html
@@ -75,7 +75,7 @@
                     <div class="control-group col-md-3">
                         <div class="form-row">
                             <div class="control-group col-md-6">
-                                <label>Adult</label>
+                                <label>Dewasa</label>
                                 <select class="custom-select">
                                     <option selected>0</option>
                                     <option value="1">1</option>
@@ -91,7 +91,7 @@
                                 </select>
                             </div>
                             <div class="control-group col-md-6 kid">
-                                <label>Kid</label>
+                                <label>Anak</label>
                                 <select class="custom-select">
                                     <option selected>0</option>
                                     <option value="1">1</option>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="control-group col-md-3">
-                        <button class="btn btn-block">Search</button>
+                        <button class="btn btn-block">Cari</button>
                     </div>
                 </div>
             </div>
