--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="room-img">
-                        <img src="img/Junior.JPG">
+                        <img src="img/Junior.JPG" style="width: 60%; height: auto;">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -248,7 +248,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="room-img">
-                        <img src="img/Superior.JPG">
+                        <img src="img/Superior.JPG" style="width: 60%; height: auto;">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -277,7 +277,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="room-img">
-                        <img src="img/Deluxe.JPG">
+                        <img src="img/Deluxe.JPG" style="width: 60%; height: auto;">
                     </div>
                 </div>
                 <div class="col-md-6">
