--- a/room.html
+++ b/room.html
@@ -8,7 +8,7 @@
         <meta content="" name="description">
 
         <!-- Favicons -->
-        <link href="img/batu.ico" rel="icon">
+        <link href="img/BatuEmasInnIcon.ico" rel="icon">
         <link href="img/apple-favicon.png" rel="apple-touch-icon">
 
         <!-- Google Fonts -->
