--- a/amenities.html
+++ b/amenities.html
@@ -76,7 +76,7 @@
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-6"></i>
                 <h3>Televisi</h3>
-                <p>Hibur diri Anda dengan televisi layar datar definisi tinggi kami.</p>
+                <p>Hibur diri Anda dengan televisi standar kami.</p>
             </div>
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-7"></i>
