--- a/index.html
+++ b/index.html
@@ -175,18 +175,14 @@
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-6"></i>
                 <h3>Televisi</h3>
-                <p>Hibur diri Anda dengan televisi layar datar definisi tinggi kami.</p>
+                <p>Hibur diri Anda dengan televisi standar kami.</p>
             </div>
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-7"></i>
                 <h3>WiFi</h3>
                 <p>Tetap terkoneksi dengan layanan Wi-Fi kami yang cepat dan handal.</p>
             </div>
-            <div class="col-md-3 col-sm-6 icons">
-                <i class="icon icon-8"></i>
-                <h3>Telepon</h3>
-                <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
-            </div>
+           
 	<div class="col-md-3 col-sm-6 icons">
     		<i class="icon icon-15"></i>
     		<h3>Parking</h3>
