--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- Welcome Section End -->
         
         <!-- Amenities Section Start -->
-      <div id="amenities" class="home-amenities">
+         <div id="amenities" class="home-amenities">
     <div class="container">
         <div class="section-header">
             <h2>Fasilitas & Layanan</h2>
@@ -182,7 +182,11 @@
                 <h3>WiFi</h3>
                 <p>Tetap terkoneksi dengan layanan Wi-Fi kami yang cepat dan handal.</p>
             </div>
-           
+            <div class="col-md-3 col-sm-6 icons">
+                <i class="icon icon-8"></i>
+                <h3>Telepon</h3>
+                <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
+            </div>
 	<div class="col-md-3 col-sm-6 icons">
     		<i class="icon icon-15"></i>
     		<h3>Parking</h3>
