--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             </div>
             <div class="col-md-3 col-sm-6 icons">
                 <i class="icon icon-8"></i>
-                <h3>Telepon</h3>
-                <p>Fasilitas komunikasi mudah dengan telepon di setiap kamar.</p>
+                <h3>Cleaner</h3>
+                <p>Pramusiwi kami memastikan kebersihan dan kenyamanan, memberikan pengalaman yang lancar selama menginap Anda.</p>
             </div>
 	<div class="col-md-3 col-sm-6 icons">
     		<i class="icon icon-15"></i>
