--- a/index.html
+++ b/index.html
@@ -340,20 +340,20 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="port-slider">
-                                    <div><img src="img/room-slider/room-1.jpg"></div>
-                                    <div><img src="img/room-slider/room-2.jpg"></div>
-                                    <div><img src="img/room-slider/room-3.jpg"></div>
-                                    <div><img src="img/room-slider/room-4.jpg"></div>
-                                    <div><img src="img/room-slider/room-5.jpg"></div>
-                                    <div><img src="img/room-slider/room-6.jpg"></div>
+                                    <div><img src="img/baturoom1.jpg"></div>
+                                    <div><img src="img/baturoom2.jpg"></div>
+                                    <div><img src="img/baturoom3.jpg"></div>
+                                    <div><img src="img/batuwindow.jpg"></div>
+                                    <div><img src="img/batutoilet.jpg"></div>
+                                    <div><img src="img/frontview.png"></div>
                                 </div>
                                 <div class="port-slider-nav">
-                                    <div><img src="img/room-slider/room-1.jpg"></div>
-                                    <div><img src="img/room-slider/room-2.jpg"></div>
-                                    <div><img src="img/room-slider/room-3.jpg"></div>
-                                    <div><img src="img/room-slider/room-4.jpg"></div>
-                                    <div><img src="img/room-slider/room-5.jpg"></div>
-                                    <div><img src="img/room-slider/room-6.jpg"></div>
+                                    <div><img src="img/baturoom1.jpg"></div>
+                                    <div><img src="img/baturoom2.jpg"></div>
+                                    <div><img src="img/baturoom3.jpg"></div>
+                                    <div><img src="img/batuwindow.jpg"></div>
+                                    <div><img src="img/batutoilet.jpg"></div>
+                                    <div><img src="img/frontview.png"></div>
                                 </div>
                             </div>
                             <div class="col-12">
