--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
         <li data-target="#headerSlider" data-slide-to="3"></li>
         <li data-target="#headerSlider" data-slide-to="4"></li>
         <li data-target="#headerSlider" data-slide-to="5"></li>
+	<li data-target="#headerSlider" data-slide-to="6"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="width: 60%; height: auto;">
+	<div class="carousel-item active">
+            <img src="img/frontview0.JPG" alt="Room 1">
+        </div>
+	    
         <div class="carousel-item active">
             <img src="img/baturoom1.jpg" alt="Room 1">
         </div>
