--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
         <li data-target="#headerSlider" data-slide-to="3"></li>
         <li data-target="#headerSlider" data-slide-to="4"></li>
         <li data-target="#headerSlider" data-slide-to="5"></li>
-	<li data-target="#headerSlider" data-slide-to="6"></li>
+	    <li data-target="#headerSlider" data-slide-to="6"></li><!-- Added for the new slide -->
     </ol>
-    <div class="carousel-inner" style="width: 60%; height: auto;">
-	<div class="carousel-item active">
-            <img src="img/frontview0.JPG" alt="Room 1">
-        </div>
-	    
+    <div class="carousel-inner">
         <div class="carousel-item active">
+            <img src="img/frontview0.JPG" alt="Front View 0">
+        </div>
+        <div class="carousel-item">
+            <img src="img/frontview.png" alt="Front View">
+        </div>
+        <div class="carousel-item">
             <img src="img/baturoom1.jpg" alt="Room 1">
         </div>
         <div class="carousel-item">
@@ -82,9 +84,6 @@
         </div>
         <div class="carousel-item">
             <img src="img/batutoilet.jpg" alt="Toilet">
-        </div>
-        <div class="carousel-item">
-            <img src="img/frontview.png" alt="Front View">
         </div>
     </div>
 
