--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="img/frontview0.JPG" alt="Front View 0">
         </div>
         <div class="carousel-item">
-            <img src="img/frontview.png" alt="Front View">
+            <img src="img/baturecep.jpg" alt="Front View">
         </div>
         <div class="carousel-item">
             <img src="img/baturoom1.jpg" alt="Room 1">
