--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="img/room/slide2.jpg" alt="Batu Emas Inn">
         </div>
 	<div class="carousel-item">
-            <img src="img/room/slide5.jpg alt="Batu Emas Inn">
+            <img src="img/room/slide5.jpg" alt="Batu Emas Inn">
         </div>
         
     </div>
