--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="room-rate">
-                        <h3>From</h3>
+                        <h3>IDR</h3>
                         <h1>$350</h1>
                         <a href="#">Pesan</a>
                     </div>
@@ -308,7 +308,7 @@
         </div>
         <div class="col-md-3">
             <div class="room-rate">
-                <h3>From</h3>
+                <h3>IDR</h3>
                 <h1>$405</h1>
                 <a href="#">Pesan</a>
             </div>
@@ -345,7 +345,7 @@
         </div>
         <div class="col-md-3">
             <div class="room-rate">
-                <h3>From</h3>
+                <h3>IDR</h3>
                 <h1>$475</h1>
                 <a href="#">Pesan</a>
             </div>
