--- a/room.html
+++ b/room.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="room-rate">
-                        <h3>From</h3>
+                        <h3>IDR</h3>
                         <h1>$350</h1>
                         <a href="#">Pesan</a>
                     </div>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="room-rate">
-                        <h3>From</h3>
+                        <h3>IDR</h3>
                         <h1>$405</h1>
                         <a href="#">Pesan</a>
                     </div>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="room-rate">
-                        <h3>From</h3>
+                        <h3>IDR</h3>
                         <h1>$475</h1>
                         <a href="#">Pesan</a>
                     </div>
