--- a/contact.html
+++ b/contact.html
@@ -60,18 +60,8 @@
                 <div class="row contact-info">
                     <div class="col-md-4">
                         <div class="info-item">
-    <!-- Embed Google Maps iframe here -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.291070069883!2d136.89205857497834!3d-4.541534795432943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x68237730edf98f17%3A0xbe11deff9b61c43a!2sJl.%20Jend.%20Ahmad%20Yani%20No.82%2C%20Kwamki%2C%20Kec.%20Mimika%20Baru%2C%20Kabupaten%20Mimika%2C%20Papua%2099971!5e0!3m2!1sen!2sid!4v1704937759765!5m2!1sen!2sid" 
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-    <!-- Address Information -->
-    <p><i class="fa fa-map-marker"></i> <a> Jl. Jend. Ahmad Yani No.82Kwamki, Kec. Mimika Baru, Kabupaten Mimika, Papua 99971</a></p>
-</div>
+                            <p><i class="fa fa-map-marker"></i> <a href="https://maps.app.goo.gl/KbJabT15V71quhF66"> Jl. Jend. Ahmad Yani No.82Kwamki, Kec. Mimika Baru, Kabupaten Mimika, Papua 99971</a></p>
+                        </div>
 
                     </div>
                     <div class="col-md-4">
