--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <li class="active"><a href="index.html">Beranda</a></li>
 <li><a href="about.html">Tentang Kami</a></li>
 <li><a href="room.html">Kamar</a></li>
-<li><a href="amenities.html">Fasilitas</a></li>
+<li><a href="amenities.html">Fasilitas</a></li>er
+			
 <li><a href="booking.html">Pemesanan</a></li>
 <li><a href="login.html">Masuk</a></li>
 <li><a href="contact.html">Hubungi Kami</a></li>
@@ -66,7 +67,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img//room/slide1.jpg" alt="Batu Emas Inn">
+            <img src="img/frontview0.JPG" alt="Batu Emas Inn">
         </div>
         <div class="carousel-item">
             <img src="img/room/slide4.jpg" alt="Batu Emas Inn">
