--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li class="active"><a href="index.html">Beranda</a></li>
 <li><a href="about.html">Tentang Kami</a></li>
 <li><a href="room.html">Kamar</a></li>
-<li><a href="amenities.html">Fasilitas</a></li>er
+<li><a href="amenities.html">Fasilitas</a></li>
 			
 <li><a href="booking.html">Pemesanan</a></li>
 <li><a href="login.html">Masuk</a></li>
