--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,6 @@
 <li><a href="about.html">Tentang Kami</a></li>
 <li><a href="room.html">Kamar</a></li>
 <li><a href="amenities.html">Fasilitas</a></li>
-<li><a href="booking.html">Pemesanan</a></li>
 <li><a href="login.html">Masuk</a></li>
 <li class="active"><a href="contact.html">Hubungi Kami</a></li>
                 </ul>
@@ -76,39 +75,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="contact-form">
-                    <div id="success"></div>
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                        <div class="form-row">
-                            <div class="control-group col-sm-6">
-                                <label>Nama Anda</label>
-                                <input type="text" class="form-control" id="name" placeholder="Contoh: Budi Santoso" required="required" data-validation-required-message="Silakan masukkan nama Anda" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="control-group col-sm-6">
-                                <label>Email</label>
-                                <input type="email" class="form-control" id="email" placeholder="Contoh: email@contoh.com" required="required" data-validation-required-message="Silakan masukkan email Anda" />
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label>Subjek</label>
-                            <input type="text" class="form-control" id="subject" placeholder="Contoh: Pemesanan Kamar" required="required" data-validation-required-message="Silakan masukkan subjek pesan Anda" />
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="control-group">
-                            <label>Pesan</label> 
-                            <textarea class="form-control" id="message" rows="5" placeholder="Contoh: Saya membutuhkan kamar premium" required="required" data-validation-required-message="Silakan masukkan pesan Anda"></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div class="button"><button type="submit" id="sendMessageButton">Kirim Pesan</button></div>
-                    </form>
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
+
+	    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.2910700447005!2d136.8946335!3d-4.5415348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x68237730edf98f17%3A0xbe11deff9b61c43a!2sJl.%20Jend.%20Ahmad%20Yani%20No.82%2C%20Kwamki%2C%20Kec.%20Mimika%20Baru%2C%20Kabupaten%20Mimika%2C%20Papua%2099971!5e0!3m2!1sen!2sid!4v1706071047550!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <!-- Contact Section End -->
 
         
