--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,10 @@
                     </div>
                 </div>
             </div>
+		<center>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.2910700447005!2d136.8946335!3d-4.5415348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x68237730edf98f17%3A0xbe11deff9b61c43a!2sJl.%20Jend.%20Ahmad%20Yani%20No.82%2C%20Kwamki%2C%20Kec.%20Mimika%20Baru%2C%20Kabupaten%20Mimika%2C%20Papua%2099971!5e0!3m2!1sen!2sid!4v1706071047550!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </center>
+	</div>
     </div>
 </div>
 		
