--- a/room.html
+++ b/room.html
@@ -61,7 +61,15 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="room-img">
-                        <img src="img/Junior.JPG" style="width: 70%; height: auto;">
+                        <div class="box12">
+                            <img src="img/Junior.JPG">
+                            <div class="box-content">
+                                <h3 class="title">Junior</h3>
+                                <ul class="icon">
+                                    <li><a href="#" data-toggle="modal" data-target="#modal-id"><i class="fa fa-link"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -86,66 +94,82 @@
         </div>
 
        <!-- Kamar Superior -->
-       <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="room-img">
-                        <img src="img/Superior.JPG" style="width: 70%; height: auto;">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="room-des">
-                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Superior</a></h3>
-                        <p>Nikmati kemewahan dan kenyamanan Kamar Superior kami yang luas dengan desain modern dan fasilitas terbaik untuk pengalaman menginap yang tak terlupakan.</p>
-                        <ul class="room-size">
-                            <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
-                            <li><i class="fa fa-arrow-right"></i>Beds: 1 Single or Double(s) </li>
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="room-img">
+                <div class="box12">
+                    <img src="img/Superior.JPG"> <!-- Added image content for Superior room -->
+                    <div class="box-content">
+                        <h3 class="title">Superior</h3>
+                        <ul class="icon">
+                            <li><a href="#" data-toggle="modal" data-target="#modal-id"><i class="fa fa-link"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="room-rate">
-                        <h3>IDR</h3>
-                        <h1>$405</h1>
-                        <a href="#">Pesan</a>
-                    </div>
-                </div>
             </div>
-            <hr>
         </div>
+        <div class="col-md-6">
+            <div class="room-des">
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Superior</a></h3>
+                <p>Nikmati kemewahan dan kenyamanan Kamar Superior kami yang luas dengan desain modern dan fasilitas terbaik untuk pengalaman menginap yang tak terlupakan.</p>
+                <ul class="room-size">
+                    <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
+                    <li><i class="fa fa-arrow-right"></i>Beds: 1 Single or Double(s) </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="room-rate">
+                <h3>IDR</h3>
+                <h1>$405</h1>
+                <a href="#">Pesan</a>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
 
-        <!-- Kamar Deluxe -->
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="room-img">
-                        <img src="img/Deluxe.JPG" style="width: 70%; height: auto;">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="room-des">
-                        <h3><a href="#" data-toggle="modal" data-target="#modal-id">Deluxe</a></h3>
-                        <p>Hadiri kenyamanan luar biasa dalam Kamar Deluxe kami yang menawarkan desain mewah, fasilitas premium, dan pemandangan yang menakjubkan untuk pengalaman menginap yang istimewa.</p>
-                        <ul class="room-size">
-                            <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
-                            <li><i class="fa fa-arrow-right"></i>Beds: 1 Single(s) </li>
+<!-- Kamar Deluxe -->
+<div class="col-md-12">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="room-img">
+                <div class="box12">
+                    <img src="img/Deluxe.JPG"> <!-- Added image content for Deluxe room -->
+                    <div class="box-content">
+                        <h3 class="title">Deluxe</h3>
+                        <ul class="icon">
+                            <li><a href="#" data-toggle="modal" data-target="#modal-id"><i class="fa fa-link"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="room-rate">
-                        <h3>IDR</h3>
-                        <h1>$475</h1>
-                        <a href="#">Pesan</a>
-                    </div>
-                </div>
             </div>
-            <hr>
         </div>
+        <div class="col-md-6">
+            <div class="room-des">
+                <h3><a href="#" data-toggle="modal" data-target="#modal-id">Deluxe</a></h3>
+                <p>Hadiri kenyamanan luar biasa dalam Kamar Deluxe kami yang menawarkan desain mewah, fasilitas premium, dan pemandangan yang menakjubkan untuk pengalaman menginap yang istimewa.</p>
+                <ul class="room-size">
+                    <li><i class="fa fa-arrow-right"></i>Size: 16.0 meter square </li>
+                    <li><i class="fa fa-arrow-right"></i>Beds: 1 Single(s) </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="room-rate">
+                <h3>IDR</h3>
+                <h1>$475</h1>
+                <a href="#">Pesan</a>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
     </div>
 </div>
 
-<!-- Room Section End -->
+        <!-- Room Section End -->
         
         <!-- Modal for Room Section Start -->
         <div id="modal-id" class="modal fade" tabindex="-1" role="dialog">
@@ -158,31 +182,23 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="port-slider">
-                                    <div><img src="img/room-slider/room-1.jpg"></div>
-                                    <div><img src="img/room-slider/room-2.jpg"></div>
-                                    <div><img src="img/room-slider/room-3.jpg"></div>
-                                    <div><img src="img/room-slider/room-4.jpg"></div>
-                                    <div><img src="img/room-slider/room-5.jpg"></div>
-                                    <div><img src="img/room-slider/room-6.jpg"></div>
+                                    <div><img src="img/baturoom1.jpg"></div>
+                                    <div><img src="img/baturoom2.jpg"></div>
+                                    <div><img src="img/baturoom3.jpg"></div>
+                                    <div><img src="img/batuwindow.jpg"></div>
+                                    <div><img src="img/batutoilet.jpg"></div>
+                                    <div><img src="img/frontview.png"></div>
                                 </div>
                                 <div class="port-slider-nav">
-                                    <div><img src="img/room-slider/room-1.jpg"></div>
-                                    <div><img src="img/room-slider/room-2.jpg"></div>
-                                    <div><img src="img/room-slider/room-3.jpg"></div>
-                                    <div><img src="img/room-slider/room-4.jpg"></div>
-                                    <div><img src="img/room-slider/room-5.jpg"></div>
-                                    <div><img src="img/room-slider/room-6.jpg"></div>
+                                    <div><img src="img/baturoom1.jpg"></div>
+                                    <div><img src="img/baturoom2.jpg"></div>
+                                    <div><img src="img/baturoom3.jpg"></div>
+                                    <div><img src="img/batuwindow.jpg"></div>
+                                    <div><img src="img/batutoilet.jpg"></div>
+                                    <div><img src="img/frontview.png"></div>
                                 </div>
                             </div>
-                            <div class="col-12">
-                                <h2>Lorem ipsum dolor</h2>
-                                <p>
-                                    Lorem ipsum dolor viverra purus imperdiet rhoncus imperdiet. Suspendisse vulputate condimentum ligula sollicitudin hendrerit. Phasellus luctus, elit et ultrices interdum, neque mi pellentesque massorci. Nam in cursus ex, nec mattis lectus. Curabitur quis elementum nunc. Mauris iaculis, justo eu aliquam sagittis, arcu eros cursus libero, sit amet eleifend dolor odio at lacus. 
-                                </p>
-                                <div class="modal-link">
-                                    <a href="#">Book Now</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
