--- a/index.html
+++ b/index.html
@@ -25,9 +25,89 @@
         <!-- Main Stylesheet File -->
         <link href="css/hover-style.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+
+	    <!-- Whatsapp Button -->
+	    <style>
+    .whatsapp-popup {
+        display: none;
+        position: fixed;
+        bottom: 15px;
+        right: 15px;
+        z-index: 1000;
+    }
+
+    .whatsapp-popup-content {
+        background-color: #25d366;
+        color: #fff;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .whatsapp-popup-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 5px;
+    }
+
+    .whatsapp-popup-body {
+        text-align: center;
+    }
+
+    .whatsapp-link {
+        display: inline-block;
+        background-color: #fff;
+        color: #25d366;
+        padding: 8px 15px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+    }
+
+    .whatsapp-link:hover {
+        background-color: #f0f0f0;
+    }
+
+    .close-whatsapp-popup {
+        cursor: pointer;
+        font-size: 20px;
+    }
+</style>
+	    
     </head>
 
     <body>
+
+	    <!-- WhatsApp Popup -->
+<div id="whatsapp-popup" class="whatsapp-popup">
+    <div class="whatsapp-popup-content">
+        <div class="whatsapp-popup-header">
+            <p>Need assistance? Chat with us on WhatsApp!</p>
+            <span class="close-whatsapp-popup" onclick="closeWhatsappPopup()">&times;</span>
+        </div>
+        <div class="whatsapp-popup-body">
+            <p>Hi! How can we help you today?</p>
+            <a href="https://wa.me/your_number" target="_blank" class="whatsapp-link">Chat Now</a>
+        </div>
+    </div>
+</div>
+
+	    <!-- WhatsApp Popup Script -->
+<script>
+    function openWhatsappPopup() {
+        document.getElementById("whatsapp-popup").style.display = "block";
+    }
+
+    function closeWhatsappPopup() {
+        document.getElementById("whatsapp-popup").style.display = "none";
+    }
+
+    // Show the popup after a delay (adjust as needed)
+    setTimeout(openWhatsappPopup, 5000);
+</script>
+
+	    
         <!-- Header Section Start -->
         <header id="header">
             <a href="index.html" class="logo"><img src="img/BatuEmas.png" alt="logo"></a>
