--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div class="whatsapp-popup-body">
             <p>Hi! How can we help you today?</p>
-            <a href="https://wa.me/your_number" target="_blank" class="whatsapp-link">Chat Now</a>
+            <a href="https://wa.me/+62085218125850" target="_blank" class="whatsapp-link">Chat</a>
         </div>
     </div>
 </div>
