--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 
     <body>
 
-
-	    <!-- WhatsApp Button -->
-<div id="whatsapp-button">
-  <a href="https://wa.me/+62082226644055" target="_blank">
-    <img src="phone-icon.png" alt="Phone Icon">
-  </a>
+<!-- WhatsApp Popup -->
+<div id="whatsapp-popup" class="whatsapp-popup">
+    <div class="whatsapp-popup-content">
+        <a href="https://wa.me/+62082226644055" target="_blank" class="whatsapp-link">Chat</a>
+    </div>
 </div>
+	  
 
 	    <!-- WhatsApp Popup Script -->
 <script>
