--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
 	    
 <!-- WhatsApp Style -->
-<style>
+
+    <style>
+
     .Btn {
         width: 45px;
         height: 45px;
@@ -43,6 +45,7 @@
         border-radius: 7px;
         cursor: pointer;
         transition: all 0.3s;
+        z-index: 1000; /* Set a higher z-index value */
     }
 
     .svgContainer {
@@ -80,6 +83,7 @@
         background-color: rgba(156, 156, 156, 0.466);
         backdrop-filter: blur(4px);
     }
+
 </style>
 
 	    
