--- a/index.html
+++ b/index.html
@@ -32,21 +32,19 @@
     <style>
 
     .Btn {
-        width: 45px;
-        height: 45px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        background-color: transparent;
-        position: fixed;
-        bottom: 15px; /* Adjust the bottom position as needed */
-        right: 15px; /* Adjust the right position as needed */
-        border-radius: 7px;
-        cursor: pointer;
-        transition: all 0.3s;
-        z-index: 1000; /* Set a higher z-index value */
-    }
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background-color: transparent;
+  position: relative;
+  /* overflow: hidden; */
+  border-radius: 7px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
 
     .svgContainer {
         width: 100%;
